--- a/index.html
+++ b/index.html
@@ -5,27 +5,40 @@
 
     <!-- Google fonts -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:400,700">
-
-    <!-- Fontawesome -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 
+    <!-- Fontawesome -->
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Your style -->
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- Here goes your content -->
-    <div class="container">
-      <div class="card text-center">
+    <div id="sidebar">
+      <ul>
+        <li><a href="#summary">
+          <i class="fa fa-info-circle"></i>
+        </a></li>
+        <li><a href="#favorite-movies">
+          <i class="fa fa-file-video-o"></i>
+        </a>
+        </li>
+        <li><a href="#footer">
+          <i class="fa fa-life-ring"></i>
+        </a></li>
+      </ul>
+    </div>
+    <div class="content">
+    <div class="container-fluid">
+      <div class="card text-center" id="summary">
         <img src="images/perrine.jpg" alt="perrine meteyer" class="img-circle shadowed" id="img-profil">
         <h1>Perrine Meteyer</h1>
         <h2> Freelance Web marketing</h2>
         <h2 class="text-italic"> Student @Le Wagon</h2>
-          <p class> After a Master degree in Marketing and Business Strategy, I decided to <strong>learn the code</strong> and bild my own business ! </p>
+          <p class="text-center"> After a Master degree in Marketing and Business Strategy, I decided to <strong>learn the code</strong> and bild my own business ! </p>
           <a href="http://perrinemeteyer.com" target="_blank" class="btn-blue">See for yourself </a>
       </div>
       <div class="card text-center">
@@ -35,7 +48,7 @@
             <li class="text-center"><a href="https://twitter.com/MeteyerPerrine" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i><br>Twitter</a></li>
           </ul>
       </div>
-      <div class="card text-center">
+      <div class="card text-center" id="favorite-movies">
         <h3>My favorite movies</h3>
         <table id="movies">
           <tr>
@@ -44,7 +57,7 @@
             </td>
             <td>
               <h4>Into the wild</h4>
-              <p>Tout juste diplômé de l'université, Christopher McCandless, 22 ans, est promis à un brillant avenir. Pourtant, tournant le dos à l'existence confortable et sans surprise qui l'attend, le jeune homme décide de prendre la route en laissant tout derrière lui.</p>
+              <p class="text-justify">Tout juste diplômé de l'université, Christopher McCandless, 22 ans, est promis à un brillant avenir. Pourtant, tournant le dos à l'existence confortable et sans surprise qui l'attend, le jeune homme décide de prendre la route en laissant tout derrière lui.</p>
             </td>
           </tr>
           <tr>
@@ -53,7 +66,7 @@
             </td>
             <td>
               <h4>La vie est un long fleuve tranquille</h4>
-              <p>Dans une petite ville du nord de la France, deux familles nombreuses, les Le Quesnoy et les Groseille, d'origines bien différentes, n'auraient jamais du se rencontrer. Mais c'était sans compter sur Josette, l'infirmière devouée du docteur Mavial, amoureuse et lasse d'attendre qu'il quitte sa femme.</p>
+              <p class="text-justify">Dans une petite ville du nord de la France, deux familles nombreuses, les Le Quesnoy et les Groseille, d'origines bien différentes, n'auraient jamais du se rencontrer. Mais c'était sans compter sur Josette, l'infirmière devouée du docteur Mavial, amoureuse et lasse d'attendre qu'il quitte sa femme.</p>
             </td>
           </tr>
           <tr>
@@ -62,20 +75,21 @@
             </td>
             <td>
               <h4>Sept vies</h4>
-              <p>Hanté par un secret, Ben Thomas cherche sa rédemption en transformant radicalement la vie de sept personnes qu'il ne connaît pas. Une fois son plan mis en place, plus rien ne pourra l'arrêter. C'est tout du moins ce qu'il croit.</p>
+              <p class="text-justify">Hanté par un secret, Ben Thomas cherche sa rédemption en transformant radicalement la vie de sept personnes qu'il ne connaît pas. Une fois son plan mis en place, plus rien ne pourra l'arrêter. C'est tout du moins ce qu'il croit.</p>
             </td>
           </tr>
         </table>
       </div>
-      <div class="card text-center">
+      <div class="card text-center" id="footer">
         <h3>About this page</h3>
-          <p> This page has been coded during <a href="https://www.lewagon.com/program" target="_blank"> the FullStack program @LeWagon. </a> That was probably the best experience of my entire life.</p>
+          <p class="text-center"> This page has been coded during <a href="https://www.lewagon.com/program" target="_blank"> the FullStack program @LeWagon. </a> That was probably the best experience of my entire life.</p>
             <ul class="list-inline">
             <li><a href="#"><i class="fa fa-heart" aria-hidden="true"></i></a></li>
             <li><a href="#"><i class="fa fa-star" aria-hidden="true"></i></a></li>
             <li><a href="#"><i class="fa fa-share" aria-hidden="true"></i></a></li>
           </ul>
       </div>
+    </div>
     </div>
   </body>
 </html>
